fix error in yml file

--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -6,7 +6,7 @@ jobs:
         run-on: ubuntu-latest
         steps:
         -name: Step one
-         uses: action/checkout@v2
+         uses: actions/checkout@v2
         -name: Step two
          run: env | sort 
     job2:
@@ -14,6 +14,6 @@ jobs:
         run-on: windows-laterst
         steps:
         -name: Step one
-         uses: action/checkout@v2        
+         uses: actions/checkout@v2        
         -name: Step two
          run: "Get-childItem Env: | Sort-Object Name"
