--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -11,6 +11,8 @@ jobs:
               uses: actions/checkout@v2
             - name: Step two
               run: env | sort
+            - name: Run super-linter
+              uses: github/super-linter@v3
     job2:
         name: Second Job
         runs-on: windows-latest
